# visionmate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release-build.yml  release-please.yml
docs/: LOGGING.md
src/deskmate/: __init__.py
src/deskmate/capture/: __init__.py  screen_capture.py
src/deskmate/core/: __init__.py
src/deskmate/recognition/: __init__.py
src/deskmate/ui/: __init__.py
src/visionmate/: __init__.py  __main__.py  app.py  models.py
src/visionmate/capture/: __init__.py  audio.py  screen.py  screen_capture.py
src/visionmate/core/: __init__.py  input.py  logging.py  logging_config.py  models.py  session.py  version.py
src/visionmate/core/capture/: __init__.py  audio.py  device.py  manager.py  source.py  stream.py  video.py
src/visionmate/core/multimedia/: __init__.py  buffer.py  detector.py  handlers.py  manager.py  segment.py
src/visionmate/core/recognition/: __init__.py  openai_compatible.py  openai_realtime.py  question_segmenter.py  stt.py  vlm_client.py
src/visionmate/core/session/: __init__.py  manager.py
src/visionmate/core/settings/: __init__.py  manager.py
src/visionmate/desktop/: __init__.py  dialogs.py  main.py  styles.py
src/visionmate/desktop/dialogs/: __init__.py  about.py  console.py  settings.py  window_selector.py
src/visionmate/desktop/widgets/: __init__.py  action.py  audio.py  control.py  input.py  input_mode.py  metrics.py  mode.py  preview.py  request.py  response.py  session.py  video.py  video_input.py
src/visionmate/ui/: __init__.py  audio_waveform.py  device.py  device_controls.py  input.py  main.py  preview.py  video_preview.py
src/visionmate/ui/widgets/: __init__.py  fps.py  method.py  preview.py  session.py  waveform.py
tests/: test_audio_capture.py  test_screen_capture.py  test_smoke.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_error_handling_checkpoint.py
tests/integration/capture/: __init__.py  test_screen_capture_integration.py
tests/integration/ui/: __init__.py  test_ui_integration.py
tests/integration/visionmate/: test_multimedia_checkpoint.py  test_session_multimedia_integration.py
tests/integration/visionmate/capture/: test_device_integration.py  test_device_manager.py  test_device_properties.py  test_screen_capture_integration.py  test_video.py  test_video_integration.py
tests/integration/visionmate/ui/: test_ui_integration.py
tests/manual/: test_complete_capture.py  test_session_control.py  test_settings_management.py
tests/unit/: __init__.py
tests/unit/visionmate/: __init__.py
tests/unit/visionmate/capture/: __init__.py  test_audio.py  test_audio_capture.py  test_screen.py  test_screen_capture.py
tests/unit/visionmate/core/: test_buffer_verification.py  test_input.py  test_logging.py  test_session.py
tests/unit/visionmate/core/capture/: test_device.py  test_device_properties.py  test_manager.py  test_source.py  test_video.py
tests/unit/visionmate/core/multimedia/: test_handlers.py  test_multimedia_manager.py
tests/unit/visionmate/core/recognition/: __init__.py  test_vlm_client.py
tests/unit/visionmate/core/settings/: __init__.py  test_manager.py
tests/unit/visionmate/desktop/: test_video_preview.py
tests/unit/visionmate/desktop/dialogs/: test_console.py  test_settings.py
tests/unit/visionmate/desktop/widgets/: test_video_widgets.py
tests/unit/visionmate/ui/: test_ui_components.py
tests/unit/visionmate/ui/widgets/: test_method.py
tests/visionmate/capture/: test_screen_capture.py
