[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deskmate"
version = "0.1.0"
description = "App that streams UVC video and audio into Qwen3-omni (local or remote), fuses screen captures with spoken context, and surfaces answers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "pre-commit",
    # Core capture dependencies
    "mss>=10.1.0",
    "opencv-python>=4.12.0",
    "sounddevice>=0.5.3",
    "numpy>=2.0.0,<2.3.0",
    # UI dependencies
    "PySide6>=6.10.1",
]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ty.environment]
python-version = "3.14"
root = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = false # Allow warnings for platform-specific imports

[tool.ty.rules]
# Disable unresolved-import errors for platform-specific modules
unresolved-import = "ignore"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra"]
