[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visionmate"
version = "0.8.0"
description = "visionmate is a multi-modal assistant that continuously observes UVC video or screen capture and audio and streams into VLM (Vision Language Model), fusing vision inputs with spoken context to understand conversations and surface answers in real time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "pre-commit",
    "hypothesis>=6.0.0",
    # Core capture dependencies
    "mss>=10.1.0",
    "opencv-python>=4.12.0",
    "sounddevice>=0.5.3",
    "numpy>=2.0.0,<2.3.0",
    # UI dependencies
    "PySide6>=6.10.1",
    # Web dependencies
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    # VLM dependencies
    "openai>=1.59.0",
    # Security dependencies
    "keyring>=25.5.0",
]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ty.environment]
python-version = "3.14"
root = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = false # Allow warnings for platform-specific imports

[tool.ty.rules]
# Disable unresolved-import errors for platform-specific modules
unresolved-import = "ignore"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra"]
markers = [
    "integration: integration tests that require real hardware (run in CI with Xvfb)",
]
